--- a/app/src/main/res/layout/fragment_picture_item.xml
+++ b/app/src/main/res/layout/fragment_picture_item.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#000000">
+    android:background="#342cc2">
 
     <LinearLayout
-        android:background="#ffffff"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
+        android:layout_width="400dp"
+        android:layout_height="500dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="60dp"
+        android:background="#fafafa"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-
+            android:gravity="center_horizontal"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/fragment_picture_item_avatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher" />
-
             <View
                 android:layout_width="25dp"
                 android:layout_height="1dp"
@@ -37,42 +31,42 @@
                 android:id="@+id/fragment_picture_item_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="18dp"
-                android:text="11111111111111111"
+                android:text="1111111111"
                 android:textColor="#979494"
-                android:textSize="15dp" />
+                android:textSize="12dp" />
 
             <View
 
                 android:layout_width="25dp"
                 android:layout_height="1dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="25dp"
                 android:background="#979494" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/fragment_picture_item_title"
-            android:layout_width="350dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="标题"
             android:textColor="#000000"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
 
         <TextView
             android:id="@+id/fragment_picture_item_title_sub"
-            android:layout_width="350dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="小标题"
             android:textColor="#979494"
-            android:textSize="15dp" />
+            android:textSize="12dp" />
 
         <ImageView
             android:id="@+id/fragment_picture_item_image"
@@ -81,4 +75,14 @@
             android:layout_margin="25dp"
             android:src="@mipmap/mm" />
     </LinearLayout>
-</LinearLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/fragment_picture_item_avatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:src="@mipmap/mm"
+        app:civ_border_color="#ffffff"
+        app:civ_border_width="5dp" />
+</RelativeLayout>
