--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
+<ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="头条"/>
+    android:scrollbars="none"
+    android:id="@+id/fragment_news_heanline_lv"></ListView>
 </LinearLayout>
