--- a/app/src/main/res/layout/fragment_recraction.xml
+++ b/app/src/main/res/layout/fragment_recraction.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
+<ListView
+    android:id="@+id/fragment_news_recraction_lv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="娱乐"/>
+    android:layout_height="match_parent"></ListView>
+
 </LinearLayout>
