--- a/app/src/main/res/layout/fragment_sports.xml
+++ b/app/src/main/res/layout/fragment_sports.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
+<ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="体育"/>
+    android:id="@+id/fragment_news_sport_lv"></ListView>
 </LinearLayout>
