--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
     </FrameLayout>
 
     <TextView
+        android:id="@+id/activity_main_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#d1d1d1"/>
