--- a/app/src/main/res/layout/fragment_hotsingle.xml
+++ b/app/src/main/res/layout/fragment_hotsingle.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <ListView
+              android:layout_height="match_parent"
+              android:background="#ffffff"
+              android:orientation="vertical">
+
+    <com.lanou.xuhaijia.enjoylife.tools.MyListView
         android:id="@+id/fragment_hotsingle_lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#ffffff">
+    </com.lanou.xuhaijia.enjoylife.tools.MyListView>
 
 </LinearLayout>
