--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -15,75 +15,80 @@
         android:textSize="20dp"/>
 
     <RadioGroup
-        android:orientation="horizontal"
         android:id="@+id/fragment_music_small_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_below="@+id/fragment_music_title"
-        android:background="#50d1d1d1">
+        android:background="#40a1a1a1"
+        android:orientation="horizontal">
+
         <RadioButton
-            android:button="@null"
             android:id="@+id/fragment_music_hot_single"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
             android:text="热门单曲"
             android:textColor="@drawable/selector_font"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:layout_weight="1"/>
+            android:textSize="17dp"/>
+
         <RadioButton
-            android:button="@null"
             android:id="@+id/fragment_music_hot_musician"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
             android:text="热门音乐人"
             android:textColor="@drawable/selector_font"
-            android:textSize="17dp"
-            android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:textSize="17dp"/>
+
         <RadioButton
-            android:button="@null"
             android:id="@+id/fragment_music_type_search"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
             android:text="分类搜索"
             android:textColor="@drawable/selector_font"
-            android:textSize="17dp"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"/>
+            android:textSize="17dp"/>
     </RadioGroup>
+
     <FrameLayout
         android:id="@+id/fragment_music_fl"
-        android:layout_below="@+id/fragment_music_small_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/fragment_music_small_title">
     </FrameLayout>
-    <ImageView
-        android:visibility="gone"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/fragment_music_title"
-        android:id="@+id/fragment_music_trigon_single"
-        android:src="@mipmap/trigon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
-    <ImageView
-        android:visibility="gone"
 
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="25dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
         android:layout_below="@+id/fragment_music_title"
-        android:id="@+id/fragment_music_trigon_musician"
-        android:src="@mipmap/trigon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
-    <ImageView
-        android:visibility="gone"
-        android:layout_marginLeft="290dp"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/fragment_music_title"
-        android:id="@+id/fragment_music_trigon_search"
-        android:src="@mipmap/trigon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        android:layout_marginTop="25.5dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/fragment_music_trigon_single"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:src="@mipmap/trigon"/>
+        <ImageView
+            android:visibility="invisible"
+            android:id="@+id/fragment_music_trigon_musician"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:src="@mipmap/trigon"/>
+
+        <ImageView
+            android:visibility="invisible"
+            android:id="@+id/fragment_music_trigon_search"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:src="@mipmap/trigon"/>
+    </LinearLayout>
 </RelativeLayout>
