--- a/app/src/main/res/layout/fragment_typesearch.xml
+++ b/app/src/main/res/layout/fragment_typesearch.xml
@@ -3,11 +3,53 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/fragment_typesearch_title"
+        android:text="分类浏览"
+        android:gravity="center"
+        android:textSize="17dp"
+        android:textColor="#ffffff"
+        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="#2b2b2b">
+        <EditText
+            android:id="@+id/fragment_typesearch_et"
+            android:textSize="15dp"
+            android:hint="音乐人、流派、风格..."
+            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/oval_shape"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
+        <ImageView
+            android:id="@+id/fragment_typesearch_search"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignRight="@id/fragment_typesearch_et"
+            android:src="@mipmap/music_search"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+
+    </RelativeLayout>
+    <TextView
+        android:id="@+id/fragment_typesearch_genre"
+        android:text="流派"
+        android:textColor="#000000"
+        android:background="#409e9e9e"
+        android:paddingLeft="10dp"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
     <ListView
         android:id="@+id/fragment_typesearch_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </ListView>
 
 </LinearLayout>
