--- a/app/src/main/res/layout/activity_detalis.xml
+++ b/app/src/main/res/layout/activity_detalis.xml
@@ -21,7 +21,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="15dp"
                 android:alpha="0.6"
-                android:src="@mipmap/Unknown" />
+                android:src="@mipmap/unknown" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
