--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:background="#ff3300"
+    android:text="新闻"
+    android:textColor="@android:color/white"
+    android:textSize="30sp"
+    android:paddingTop="5dp"
+    android:paddingLeft="150dp"
+    />
     <android.support.design.widget.TabLayout
         android:id="@+id/fragment_news_tablelayout"
         android:layout_width="match_parent"
