--- a/app/src/main/res/layout/fragment_recraction.xml
+++ b/app/src/main/res/layout/fragment_recraction.xml
@@ -2,9 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.lanou.xuhaijia.enjoylife.news.MySwipeRefreshLayout
+        android:id="@+id/fragment_news_recraction_seiprelayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <ListView
     android:id="@+id/fragment_news_recraction_lv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"></ListView>
+    </com.lanou.xuhaijia.enjoylife.news.MySwipeRefreshLayout>
 
 </LinearLayout>
