--- a/app/src/main/res/layout/item_news_sport.xml
+++ b/app/src/main/res/layout/item_news_sport.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:paddingBottom="8dp">
     <ImageView
         android:id="@+id/item_news_sport_img"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="80dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
@@ -23,11 +25,12 @@
             android:id="@+id/item_news_sport_tv"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:textSize="13sp"
             android:text="tilie"
-            android:textColor="@android:color/black" />
+            android:textColor="#211d1d" />
 
         <RelativeLayout
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="15dp"
             android:orientation="horizontal">
