--- a/app/src/main/res/layout/msrl_pull_up_refresh.xml
+++ b/app/src/main/res/layout/msrl_pull_up_refresh.xml
@@ -3,10 +3,26 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:background="@android:color/holo_red_light"
     android:layout_height="match_parent">
-<TextView
-    android:layout_gravity="center"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/holo_green_light"
-    android:text="加载更多"/>
+    <ProgressBar
+        android:id="@+id/pull_to_refresh_load_progress"
+        style="@android:style/Widget.ProgressBar.Small.Inverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:paddingRight="100dp"
+        android:indeterminate="true" />
+
+    <TextView
+        android:id="@+id/pull_to_refresh_loadmore_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="5dip"
+        android:text="@string/load"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 </LinearLayout>
