--- a/app/src/main/res/layout/activity_city_select.xml
+++ b/app/src/main/res/layout/activity_city_select.xml
@@ -4,48 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@mipmap/travel_selce_city_title_imager">
+        android:background="@android:color/white"
+        android:layout_height="40dp">
 
-        <ImageView
-            android:id="@+id/activity_city_select_title_imager_back"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_margin="15dp"
-            android:src="@mipmap/travel_selce_city_title_back" />
 
         <TextView
+            android:id="@+id/activity_city_select_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="选择城市"
-            android:textColor="@android:color/white"
-            android:textSize="17sp" />
+            android:text="城市"
+            android:layout_centerInParent="true"
+            android:textSize="20sp" />
 
 
     </RelativeLayout>
 
-
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_city_select_reclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent" />
 
-        <ListView
-            android:id="@+id/activity_city_select_listview"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:divider="@null" />
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/activity_city_select_recycview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
 
 </LinearLayout>
