--- a/app/src/main/res/layout/item_travel_attractions_listview.xml
+++ b/app/src/main/res/layout/item_travel_attractions_listview.xml
@@ -66,6 +66,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/item_travel_attentions_listview_textview_rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/darker_gray">
