--- a/app/src/main/res/layout/remote_notify.xml
+++ b/app/src/main/res/layout/remote_notify.xml
@@ -5,8 +5,8 @@
               android:background="#000000"
               android:orientation="horizontal">
     <ImageView
+        android:layout_marginLeft="5dp"
         android:id="@+id/remote_notify_icon"
-        android:layout_margin="10dp"
         android:src="@mipmap/enjoy_life"
         android:layout_width="60dp"
         android:layout_height="60dp"/>
@@ -17,18 +17,19 @@
         android:layout_toRightOf="@+id/remote_notify_icon"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:textSize="17dp"
+        android:textSize="13dp"
         android:singleLine="true"
         android:textColor="#ffffff"
         android:layout_width="200dp"
         android:layout_height="wrap_content"/>
     <TextView
-        android:id="@+id/remote_notify_playnow"
-        android:layout_marginTop="3dp"
+        android:id="@+id/remote_notify_time"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/remote_notify_songname"
         android:layout_alignLeft="@+id/remote_notify_songname"
         android:textColor="#ffffff"
-        android:text="正在播放"
+        android:text="time"
+        android:textSize="9dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <ImageView
@@ -38,17 +39,25 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
         android:src="@mipmap/music_notify_close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        android:layout_width="17dp"
+        android:layout_height="20dp"/>
     <ImageView
+        android:src="@mipmap/music_notify_next"
+        android:id="@+id/remote_notify_next"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="7dp"
+        android:layout_toLeftOf="@+id/remote_notify_close"
+        android:layout_width="20dp"
+        android:layout_height="20dp"/>
+    <ImageView
+        android:layout_toLeftOf="@+id/remote_notify_next"
         android:id="@+id/remote_notify_playorstop"
         android:gravity="end"
-        android:layout_toLeftOf="@+id/remote_notify_close"
         android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
-        android:src="@mipmap/music_notify_play"
-        android:layout_width="30dp"
-        android:layout_height="30dp"/>
+        android:layout_marginRight="8dp"
+        android:src="@mipmap/music_notify_stop"
+        android:layout_width="20dp"
+        android:layout_height="20dp"/>
 
 
 </RelativeLayout>
