--- a/app/src/main/res/layout/activity_hotmusician.xml
+++ b/app/src/main/res/layout/activity_hotmusician.xml
@@ -10,7 +10,6 @@
         android:layout_height="40dp"
         android:background="#000000"
         android:gravity="center"
-        android:text="name"
         android:textColor="#ffffff"
         android:textSize="17dp"/>
 
@@ -18,66 +17,66 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:background="#212121">
+
         <ImageView
             android:id="@+id/activity_hotmusician_icon"
-            android:layout_centerVertical="true"
             android:layout_width="100dp"
-            android:layout_marginLeft="10dp"
-            android:layout_height="100dp"/>
+            android:layout_height="100dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"/>
 
         <TextView
             android:id="@+id/activity_hotmusician_name"
-            android:textSize="17dp"
-            android:textColor="#ffffff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/activity_hotmusician_icon"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_alignTop="@+id/activity_hotmusician_icon"
             android:layout_toRightOf="@+id/activity_hotmusician_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textColor="#ffffff"
+            android:textSize="17dp"/>
+
         <TextView
             android:id="@+id/activity_hotmusician_type"
-            android:textColor="#d1d1d1"
-            android:layout_marginTop="5dp"
-            android:textSize="12dp"
-            android:layout_below="@+id/activity_hotmusician_name"
-            android:layout_alignLeft="@id/activity_hotmusician_name"
             android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/activity_hotmusician_name"
+            android:layout_below="@+id/activity_hotmusician_name"
+            android:layout_marginTop="5dp"
             android:singleLine="true"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:textSize="12dp"
-            android:id="@+id/activity_hotmusician_member"
             android:textColor="#d1d1d1"
-            android:layout_marginTop="3dp"
-            android:layout_below="@+id/activity_hotmusician_type"
-            android:layout_alignLeft="@id/activity_hotmusician_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:textSize="12dp"
-            android:id="@+id/activity_hotmusician_care"
-            android:textColor="#d1d1d1"
-            android:layout_marginTop="3dp"
-            android:layout_below="@+id/activity_hotmusician_member"
-            android:layout_alignLeft="@id/activity_hotmusician_member"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <ImageView
+            android:textSize="12dp"/>
 
-            android:id="@+id/activity_hotmusician_collection"
-            android:layout_alignTop="@+id/activity_hotmusician_name"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
+        <TextView
+            android:id="@+id/activity_hotmusician_member"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/activity_hotmusician_type"
+            android:layout_below="@+id/activity_hotmusician_type"
+            android:layout_marginTop="3dp"
+            android:textColor="#d1d1d1"
+            android:textSize="12dp"/>
+
+        <TextView
+            android:id="@+id/activity_hotmusician_care"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/activity_hotmusician_member"
+            android:layout_below="@+id/activity_hotmusician_member"
+            android:layout_marginTop="3dp"
+            android:textColor="#d1d1d1"
+            android:textSize="12dp"/>
+
         <ImageView
-            android:id="@+id/activity_hotmusician_share"
-            android:layout_alignTop="@+id/activity_hotmusician_member"
-            android:layout_marginRight="20dp"
-            android:layout_alignParentRight="true"
+            android:id="@+id/activity_hotmusician_collection"
             android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="50dp"
+            android:src="@mipmap/care_white"
+            android:visibility="invisible"/>
+
 
     </RelativeLayout>
 
@@ -85,56 +84,51 @@
         android:id="@+id/activity_hotmusician_rg"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:background="#30a1a1a1">
+        android:background="#30a1a1a1"
+        android:orientation="horizontal">
 
         <RadioButton
-            android:textColor="@drawable/selector_font"
             android:id="@+id/activity_hotmusician_songs"
-            android:text="曲库"
-            android:button="@null"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
             android:gravity="center"
-            android:layout_weight="1"/>
+            android:text="曲库"
+            android:textColor="@drawable/selector_font"/>
+
         <RadioButton
-            android:textColor="@drawable/selector_font"
             android:id="@+id/activity_hotmusician_activity"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
             android:text="活动"
-            android:button="@null"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_height="match_parent"/>
+            android:textColor="@drawable/selector_font"/>
+
         <RadioButton
-            android:textColor="@drawable/selector_font"
             android:id="@+id/activity_hotmusician_photo"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:gravity="center"
             android:text="相册"
-            android:button="@null"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:gravity="center"
-            android:layout_height="match_parent"/>
+            android:textColor="@drawable/selector_font"/>
+
         <RadioButton
-            android:textColor="@drawable/selector_font"
-            android:id="@+id/activity_hotmusician_trends"
-            android:text="动态"
-            android:button="@null"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
-        <RadioButton
-            android:textColor="@drawable/selector_font"
             android:id="@+id/activity_hotmusician_message"
-            android:text="留言"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"/>
+            android:text="留言"
+            android:textColor="@drawable/selector_font"/>
 
     </RadioGroup>
+
     <FrameLayout
         android:id="@+id/activity_hotmusician_fl"
         android:layout_width="match_parent"
