--- a/app/src/main/res/layout/fragment_typesearch.xml
+++ b/app/src/main/res/layout/fragment_typesearch.xml
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/fragment_typesearch_title"
-        android:text="分类浏览"
-        android:gravity="center"
-        android:textSize="17dp"
-        android:textColor="#ffffff"
-        android:background="#000000"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
     <RelativeLayout
+        android:id="@+id/fragment_typesearch_rl"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:background="#2b2b2b">
         <EditText
+            android:singleLine="true"
             android:id="@+id/fragment_typesearch_et"
             android:textSize="15dp"
             android:hint="音乐人、流派、风格..."
@@ -37,19 +29,17 @@
             android:layout_height="20dp"/>
 
     </RelativeLayout>
-    <TextView
-        android:id="@+id/fragment_typesearch_genre"
-        android:text="流派"
-        android:textColor="#000000"
-        android:background="#409e9e9e"
-        android:paddingLeft="10dp"
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"/>
     <ListView
+        android:layout_below="@+id/fragment_typesearch_rl"
         android:id="@+id/fragment_typesearch_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+    <ListView
+        android:layout_below="@+id/fragment_typesearch_rl"
+        android:id="@+id/fragment_typesearch_lv_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
-</LinearLayout>
+</RelativeLayout>
