--- a/app/src/main/res/layout/fragment_sports.xml
+++ b/app/src/main/res/layout/fragment_sports.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <com.lanou.xuhaijia.enjoylife.news.MySwipeRefreshLayout
+        android:id="@+id/fragment_sport_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_news_sport_lv"></ListView>
+    </com.lanou.xuhaijia.enjoylife.news.MySwipeRefreshLayout>
 </LinearLayout>
