--- a/app/src/main/res/layout/load_more.xml
+++ b/app/src/main/res/layout/load_more.xml
@@ -3,7 +3,7 @@
     android:id="@+id/loadmore_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#d1d1d1" >
+    android:background="#ffffff" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="60dp"
-                android:background="@drawable/loading"
+                android:background="@mipmap/loading"
                 android:visibility="gone" />
 
             <TextView
@@ -48,6 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:background="@drawable/refresh_success"
                 android:layout_marginRight="8dp"
                 android:layout_toLeftOf="@id/loadstate_tv"
                 android:visibility="gone" />
