--- a/app/src/main/res/layout/activity_bigpic.xml
+++ b/app/src/main/res/layout/activity_bigpic.xml
@@ -3,5 +3,19 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/activity_bigpic_title"
+        android:layout_width="match_parent"
+        android:background="#000000"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        android:textSize="17dp"
+        android:layout_height="40dp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/activity_bigpic_vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
