--- a/app/src/main/res/layout/activity_welfare.xml
+++ b/app/src/main/res/layout/activity_welfare.xml
@@ -3,5 +3,9 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
+    <ImageView
+        android:scaleType="centerCrop"
+        android:id="@+id/activity_welfare_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
