--- a/app/src/main/res/layout/refresh_head.xml
+++ b/app/src/main/res/layout/refresh_head.xml
@@ -6,7 +6,7 @@
      >
 
     <RelativeLayout
-        android:background="#d1d1d1"
+        android:background="#ffffff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -40,9 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/pull_to_refresh"
+                android:text="一大波美女将要来袭"
                 android:textColor="#000000"
-                android:textSize="16sp" />
+                android:textSize="17sp" />
 
             <ImageView
                 android:id="@+id/state_iv"
